<resources>
    <string name="app_name">KidsApp</string>
    <string name="launch_math">Launch math</string>
    <string name="launch_english_reading">Launch English Reading</string>
    <string name="launch_english_sound">Launch English Sound</string>
    <string name="launch_science">Launch Science</string>
    <string name="launch_story">Launch Story</string>
    <string name="launch_video">Launch Video</string>
    <string name="app_name_pending">App Name Pending</string>
    <string name="launch_profile">Launch Profile</string>
    <string name="you_are_right">You are right!</string>
    <string name="next">Next</string>
    <string name="English_Stories">Story Time</string>
    <string name="lion_story">Hungry Lion</string>
    <string name="pigs_story">Three pigs</string>
    <string name="take_photo">Take Photo</string>
    <string name="save">Save</string>
    <string name="photo_desc">Photo from camera</string>
    <string name="photo_saved">Photo saved.</string>
    <string name="photo_not_saved">Problem saving the photo.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jack_story">Once upon a time there lived a poor widow and her son Jack. One day,
        Jack’s mother told him to sell their only cow. Jack went to
        the market and on the way he met a man who wanted to buy his
        cow. Jack asked, “What will you give me in return for my cow?”
        The man answered, “I will give you five magic beans!” Jack took
        the magic beans and gave the man the cow. But when he reached home,
        Jack’s mother was very angry. She said, “You fool! He took away your
        cow and gave you some beans!” She threw the beans out of the window.
        Jack was very sad and went to sleep without dinner. The next day,
        when Jack woke up in the morning and looked out of the window,
        he saw that a huge beanstalk had grown from his magic beans!
        He climbed up the beanstalk and reached a kingdom in the sky.
        There lived a giant and his wife. Jack went inside the house
        and found the giant’s wife in the kitchen.
        Jack said, “Could you please give me something to eat? I am so hungry!”
        The kind wife gave him bread and some milk.</string>
    <string name="Jack">Jack and the Beanstalk</string>
    <string name="camera">Camera</string>
    <string name="photo">Photo</string>
    <string name="profilepic">profilepic</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>

</resources>